RESOLVED FIXED144563
[WinCairo] Compile error in sharedEGLDisplay() method.
https://bugs.webkit.org/show_bug.cgi?id=144563
Summary [WinCairo] Compile error in sharedEGLDisplay() method.
peavo
Reported 2015-05-04 03:29:34 PDT
The PlatformDisplay type is undefined.
Attachments
Patch (1.87 KB, patch)
2015-05-04 03:35 PDT, peavo
no flags
peavo
Comment 1 2015-05-04 03:35:19 PDT
Csaba Osztrogonác
Comment 2 2015-05-04 03:38:55 PDT
I think it is the fix after bug144517, so cc-ing its author + reviewer.
peavo
Comment 3 2015-05-04 04:07:29 PDT
(In reply to comment #2) > I think it is the fix after bug144517, so cc-ing its author + reviewer. Thanks :)
Carlos Garcia Campos
Comment 4 2015-05-04 08:50:38 PDT
Oops, sorry about this, thanks for fixing it.
WebKit Commit Bot
Comment 5 2015-05-04 09:23:43 PDT
Comment on attachment 252302 [details] Patch Clearing flags on attachment: 252302 Committed r183747: <http://trac.webkit.org/changeset/183747>
WebKit Commit Bot
Comment 6 2015-05-04 09:23:47 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 7 2015-05-04 10:12:41 PDT
(In reply to comment #4) > Oops, sorry about this, thanks for fixing it. No worries, thanks for the review :)
Note You need to log in before you can comment on or make changes to this bug.