[WinCairo] Compile error in sharedEGLDisplay() method. https://bugs.webkit.org/show_bug.cgi?id=144563

Reviewed by Alex Christensen.

The PlatformDisplay type is undefined.

* platform/graphics/egl/GLContextEGL.cpp:
(WebCore::sharedEGLDisplay):


Canonical link: https://commits.webkit.org/162582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183747 268f45cc-cd09-0410-ab3c-d52691b4dbfc